--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -1,3 +1,31 @@
 <div class="body">
     <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <p class="hero-p pb-9">Education week deal</p>
+                <h1 class="hero-title pb-1" >Celebrate every student</h1>
+                <p class="hero-p2 pt-0">
+                    We provide cutting-edge technology that enhances the learning experience, making it more interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our solutions empower students to learn at their own pace, in their own style. We’re not just improving education; we’re celebrating every student’s journey towards knowledge and growth.
+                </p>
+                <a routerLink="" class="demo-button">Find gifts</a>
+            </div>
+            <img src="/assets/otherstudents.jpg" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="offers">
+        <h2 class="h2-offers text-center">
+            Extraordinary Offers: exclusively for <br>
+            educators and administrators!
+        </h2>
+        <p class="hero-p2 text-center  pt-6">Send us an email to see what we have on offer at <span style="text-decoration: underline; color: blue;">info@proscene.co.ke</span></p>
+        <div class="center  flex-col">
+            <p class="offers-p  pb-9">
+                Discover the ideal audio or video solution tailored for educational excellence. Browse our exclusive Education Offers Program. Select your perfect match and effortlessly verify checkout. Elevate your educational experience now!
+            </p>
+            <a routerLink="" class="demo-button">Dicover more</a>
+        </div>
+        <!-- <app-form></app-form> -->
+        
+    </div>
 </div>
