--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,51 +37,14 @@
     text-transform: capitalize;
     text-decoration: underline wavy $the-blue;
 }
-.button-happyhour{
-    margin-block: 1.5rem;
- }
- .read-more{
-    padding: .5em 2em;
-    background-color: $yellowish;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: capitalize;
-    border: 3px dotted $white;
-    color: $white;
-    border-radius: 30px;
-    box-shadow: 0 0 0 6px $yellowish;
-}
-
-// styling for the entertainment-package page
-.diagonal-content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    color: $white;
-}
-.small-card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $white;
-    color: $the-blue;
-    padding: .4em;
-    margin: 10px;
-    border-radius: 15px;
-    box-shadow: 0 0 0 6px $white;
-}
 
 
-.headings-h3 {
-    font-size: 1.9rem;
-    text-decoration: underline wavy;
-    color: $the-blue;
-    text-transform: capitalize;
-    display: inline;
-  }
+
   .demo-button{
     Border: 1px solid #fff;
-  padding: 4px 8px;
+  padding: 8px 25px;
+  text-transform: capitalize;
+  font-size: small;
   background-color: #0a0a22;
   color: #fff;
   border-radius: 30px;
