done with the education page

--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -4,9 +4,12 @@
         <div class="container">
             <div class="container-words">
                 <p class="hero-p pb-9">Education week deal</p>
-                <h1 class="hero-title pb-1" >Celebrate every student</h1>
+                <h1 class="hero-title pb-1">Celebrate every student</h1>
                 <p class="hero-p2 pt-0">
-                    We provide cutting-edge technology that enhances the learning experience, making it more interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our solutions empower students to learn at their own pace, in their own style. We’re not just improving education; we’re celebrating every student’s journey towards knowledge and growth.
+                    We provide cutting-edge technology that enhances the learning experience, making it more
+                    interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our
+                    solutions empower students to learn at their own pace, in their own style. We’re not just improving
+                    education; we’re celebrating every student’s journey towards knowledge and growth.
                 </p>
                 <a routerLink="" class="demo-button">Find gifts</a>
             </div>
@@ -18,14 +21,77 @@
             Extraordinary Offers: exclusively for <br>
             educators and administrators!
         </h2>
-        <p class="hero-p2 text-center  pt-6">Send us an email to see what we have on offer at <span style="text-decoration: underline; color: blue;">info@proscene.co.ke</span></p>
+        <p class="hero-p2 text-center  pt-6">Send us an email to see what we have on offer at <span
+                style="text-decoration: underline; color: blue;">info@proscene.co.ke</span></p>
         <div class="center  flex-col">
             <p class="offers-p  pb-9">
-                Discover the ideal audio or video solution tailored for educational excellence. Browse our exclusive Education Offers Program. Select your perfect match and effortlessly verify checkout. Elevate your educational experience now!
+                Discover the ideal audio or video solution tailored for educational excellence. Browse our exclusive
+                Education Offers Program. Select your perfect match and effortlessly verify checkout. Elevate your
+                educational experience now!
             </p>
             <a routerLink="" class="demo-button">Dicover more</a>
         </div>
         <!-- <app-form></app-form> -->
-        
+
     </div>
+    <h2 class="h2-offers text-center pb-7">
+        Some of our key solutions
+    </h2>
+    <div class="solutions">
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imageone"></div>
+                <div class="words">
+                    <h5 class="text-center pt-6">Interactive classes</h5>
+                    <p class="pt-6 text-center">Our solutions provide interactive experiences that can make learning more engaging. This can be particularly beneficial for younger learners who learn best through interaction and play.</p>
+                </div>
+                <div class="center  flex-col pt-6 pb-6">
+                    <a routerLink="" class="demo-button">Dicover more</a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imagetwo"></div>
+                <div class="words">
+                    <h5 class="text-center pt-6">Distance Learning:</h5>
+                    <p class="pt-6 text-center">In the current climate where remote learning is becoming increasingly necessary, our solutions can provide high-quality, interactive learning experiences from the safety of home.</p>
+                </div>
+                <div class="center  flex-col pt-6 pb-6">
+                    <a routerLink="" class="demo-button">Dicover more</a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image imagethree"></div>
+                <div class="words">
+                    <h5 class="text-center pt-6">Visual Demonstrations</h5>
+                    <p class="pt-6 text-center">Complex concepts can be simplified using visual aids, making them easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations to aid comprehension.</p>
+                </div>
+                <div class="center  flex-col pt-6 pb-6">
+                    <a routerLink="" class="demo-button">Dicover more</a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-solutions">
+            <div class="card1">
+                <div class="image  imagefour"></div>
+                <div class="words">
+                    <h5 class="text-center pt-6">Accessibility</h5>
+                    <p class="pt-6 text-center">Audiovisual solutions can make learning more accessible for all students, including those with learning difficulties. Visual or auditory cues can help these students better understand the material.</p>
+                </div>
+                <div class="center  flex-col pt-6 pb-6">
+                    <a routerLink="" class="demo-button">Dicover more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h2 class="h2-offers text-center pb-7">
+        Contact us today !
+    </h2>
+   <div class="pb-9">
+    <app-contactform></app-contactform>
+   </div>
+    <app-footer></app-footer>
 </div>
