--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,16 +1,9 @@
 
-$light-bluish: #b8d6ffff;
+$grey: #f4f4f4d5;
 $white:#ffff;
 $the-blue:#0a0a22;
 $pinkish:#e0a8d9ff;
 $yellowish:#ED4B25;
 $clr-secondary:#011936;
-$clr-tertiary:#465662;
-$clr-clear:#C2EABD;
-$clr-yeellow:#f9dc5c;
-$clr-white:#fff;
-$clr-accent: hsl(246, 85%, 60%);
-$wrapper-padding-inline: 1rem;
-$section-padding-block: 3rem;
-$wrapper-max-width: 50rem;
+
 
