--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -12,7 +12,7 @@
             deliver outstanding audio and video experiences in any space. Our Audio and Video solutions enhance your
             experiences whether you're working, learning, or at home..</h2>
         <p class="text-left pt-3">
-            <button class="demo-button ml-2" style="padding-bottom: 7px;">Connect with us!</button>
+            <button class="demo-button ml-2">Connect with us!</button>
         </p>
         
         <div class="solutions">
