--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             </li>
            
             <li class="dropdown">
-                <a href="#" class="dropbtn chevron" (click)="toggleDropdown($event)">
+                <a class="dropbtn chevron" (click)="toggleDropdown($event)">
                         <span aria-hidden="true"></span>Solutions <ng-icon name="heroChevronDown"></ng-icon>
                 </a>
                 <div class="dropdown-content">
@@ -70,7 +70,7 @@
             </li>
         </ul>
         <ul id="primary-navigation" class="primary-navigation flex section2 " data-attribute="false">
-            <button class="demo-button" style="padding-bottom: 7px;">See demo</button>
+            <button class="demo-button1">See demo</button>
         </ul> 
     </nav>
 </header>
