--- a/src/app/modules/solutions/education/education.component.html
+++ b/src/app/modules/solutions/education/education.component.html
@@ -3,9 +3,9 @@
     <header class="hero">
         <div class="container">
             <div class="container-words">
-                <p class="hero-p pb-9">Education week deal</p>
-                <h1 class="hero-title pb-1">Celebrate every student</h1>
-                <p class="hero-p2 pt-0">
+                <p class="hero-p">Education week deal</p>
+                <h1 class="hero-title pb-3">Celebrate every student as their future takes shape</h1>
+                <p class="hero-p2 pt-2">
                     We provide cutting-edge technology that enhances the learning experience, making it more
                     interactive, engaging, and accessible. From smart classrooms to virtual learning environments, our
                     solutions empower students to learn at their own pace, in their own style. We’re not just improving
@@ -16,49 +16,78 @@
             <img src="/assets/otherstudents.jpg" alt="" class="hero-image" srcset="">
         </div>
     </header>
-    <div class="offers">
-        <h2 class="h2-offers text-center">
-            Extraordinary Offers: exclusively for <br>
-            educators and administrators!
-        </h2>
-        <p class="hero-p2 text-center  pt-6">Send us an email to see what we have on offer at <span
-                style="text-decoration: underline; color: blue;">info@proscene.co.ke</span></p>
-        <div class="center  flex-col">
-            <p class="offers-p  pb-9">
-                Discover the ideal audio or video solution tailored for educational excellence. Browse our exclusive
-                Education Offers Program. Select your perfect match and effortlessly verify checkout. Elevate your
-                educational experience now!
-            </p>
-            <a routerLink="" class="demo-button">Dicover more</a>
-        </div>
-        <!-- <app-form></app-form> -->
+    <div class="options">
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroArrowDown"></ng-icon>
+                <p>Downloads</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroStar"></ng-icon>
+                <p>Certifications</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroDocumentCheck"></ng-icon>
+                <p>Validated</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroHomeModern"></ng-icon>
+                <p>Training</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroUserGroup"></ng-icon>
+                <p>Community</p>
+            </div>
+        </a>
+        <a routerLink="">
+            <div class="option1">
+                <ng-icon class="icons" name="heroBriefcase"></ng-icon>
+                <p>Careers</p>
+            </div>
+        </a>
 
     </div>
-    <h2 class="h2-offers text-center pb-7">
-        Some of our key solutions
-    </h2>
+    <div class="offers">
+        <h2 class="h2-offers text-center">
+            Latest products and innovations from Proscene
+        </h2>
+
+    </div>
+
     <div class="solutions">
         <div class="cards-solutions">
             <div class="card1">
                 <div class="image imageone"></div>
                 <div class="words">
-                    <h5 class="text-center pt-6">Interactive classes</h5>
-                    <p class="pt-6 text-center">Our solutions provide interactive experiences that can make learning more engaging. This can be particularly beneficial for younger learners who learn best through interaction and play.</p>
+                    <h5 class=" pt-6 width: 90%; padding-block">Interactive classes</h5>
+                    <p class="pt-6 width: 90%; padding-block padding-block">Our solutions provide interactive
+                        experiences that can make learning more engaging. This can be particularly beneficial for
+                        younger learners who learn best through interaction and play.</p>
                 </div>
-                <div class="center  flex-col pt-6 pb-6">
-                    <a routerLink="" class="demo-button">Dicover more</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="width: 90%; padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
         <div class="cards-solutions">
             <div class="card1">
                 <div class="image imagetwo"></div>
-                <div class="words">
-                    <h5 class="text-center pt-6">Distance Learning:</h5>
-                    <p class="pt-6 text-center">In the current climate where remote learning is becoming increasingly necessary, our solutions can provide high-quality, interactive learning experiences from the safety of home.</p>
+                <div class="words padding-block">
+                    <h5 class=" pt-6">Distance Learning:</h5>
+                    <p class="pt-6">In the current climate where remote learning is becoming increasingly necessary, our
+                        solutions can provide high-quality, interactive learning experiences from the safety of home.
+                    </p>
                 </div>
-                <div class="center  flex-col pt-6 pb-6">
-                    <a routerLink="" class="demo-button">Dicover more</a>
+                <div class=" pt-6 pb-6 padding-block">
+                    <a routerLink="" class=" width: 90%;">Dicover more ></a>
                 </div>
             </div>
         </div>
@@ -66,32 +95,76 @@
             <div class="card1">
                 <div class="image imagethree"></div>
                 <div class="words">
-                    <h5 class="text-center pt-6">Visual Demonstrations</h5>
-                    <p class="pt-6 text-center">Complex concepts can be simplified using visual aids, making them easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations to aid comprehension.</p>
+                    <h5 class=" pt-6 width: 90%; padding-block">Visual Demonstrations</h5>
+                    <p class="pt-6 width: 90%; padding-block">Complex concepts can be simplified using visual aids,
+                        making them easier for young learners to understand. Our solutions can provide clear, concise
+                        visual demonstrations to asssist in understanding.</p>
                 </div>
-                <div class="center  flex-col pt-6 pb-6">
-                    <a routerLink="" class="demo-button">Dicover more</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block">Dicover more ></a>
                 </div>
             </div>
         </div>
-        <div class="cards-solutions">
-            <div class="card1">
-                <div class="image  imagefour"></div>
-                <div class="words">
-                    <h5 class="text-center pt-6">Accessibility</h5>
-                    <p class="pt-6 text-center">Audiovisual solutions can make learning more accessible for all students, including those with learning difficulties. Visual or auditory cues can help these students better understand the material.</p>
+
+    </div>
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Latest products and innovations from Proscene
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+                easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
+                to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a">Dicover more ></a>
                 </div>
-                <div class="center  flex-col pt-6 pb-6">
-                    <a routerLink="" class="demo-button">Dicover more</a>
-                </div>
-            </div>
+
         </div>
     </div>
-    <h2 class="h2-offers text-center pb-7">
-        Contact us today !
+    <div class="flex1">
+        
+        <div class="flex1-words wordsm ">
+            <h2 class="h2-offers">
+                Get the 2024 Proscene report
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">How ready are you to tackle communication in the modern world? You can find out by checking out our latest research below.</p>
+                <a routerLink="" class="demo-button">Read report</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a">View trials and demos ></a>
+                </div>
+
+        </div>
+        <div class="images flex1-words-p images-back2">
+            <img src="" alt="" srcset="">
+        </div>
+    </div>
+    <div class="flex1">
+        <div class="images images-back3">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Latest products and innovations from Proscene
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block" style="padding-left: 0;">Complex concepts can be simplified using visual aids, making them
+                easier for young learners to understand. Our solutions can provide clear, concise visual demonstrations
+                to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a">Dicover more ></a>
+                </div>
+
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Contact us!
     </h2>
-   <div class="pb-9">
-    <app-contactform></app-contactform>
-   </div>
+    <div class="pb-9">
+        <app-contactform></app-contactform>
+    </div>
     <app-footer></app-footer>
 </div>
