--- a/src/app/modules/solutions/education/education.component.scss
+++ b/src/app/modules/solutions/education/education.component.scss
@@ -5,14 +5,14 @@
 }
 .hero-title{
     color: $the-blue;
-    font-size: clamp(2.5rem, 10vw + 0.5rem, 5rem);
+    padding-top: 2em;
+    font-size: clamp(2.5rem, 10vw + 0.5rem, 3.4rem);
     line-height: 1;
     z-index: 2;
     position: relative;
 }
 .hero-p{
     color: $the-blue;
-    padding-top: 10em;
     line-height: 1;
     font-weight: 900;
     z-index: 2;
@@ -33,13 +33,39 @@
     padding-inline: 1em;
     z-index: 2;
 }
+.icons{
+    font-size: 30px;
+}
+.options{
+    display: grid;
+    gap: 1rem;
+justify-content: center;
+    grid-template-columns: repeat();
+}
+.option1{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: .6rem;
+    p{
+        font-size: 1rem;
+        font-weight: 600;
+        color: rgb(51, 49, 49);
+    }
+}
 .hero-p2{
-    font-weight: 600;
-    padding-bottom: 1em;
+    font-weight: 500;
+    color: #0a0a22;
+    padding-bottom: 2em;
+    position: relative;
+    z-index: 9999;
 }
 .h2-offers{
     padding-top: 1em;
+    font-family: thin;
     font-size: clamp(1rem, 10vw + 0.5rem, 2rem);
+    color: #0a0a22;
     font-weight: 600;
 }
 .offers-p{
@@ -47,17 +73,19 @@
   
 }
 .card1{
-    max-width:300px ;
-    border-radius: 15px;
+    max-width:450px ;
+    box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);
     margin: 0 auto;
-    background-color: $grey;
+    background-color: #fff;
 }
 .image{
     background-size: cover;
     background-repeat: no-repeat;
     aspect-ratio: 1;
-    border-radius: 15px;
     width:100%;
+}
+.padding-block{
+    padding-inline: .8rem;
 }
 .imageone{
     background-image: url('/assets/interactive.jpeg');
@@ -72,22 +100,74 @@
     background-image: url('/assets/accessibility.png');
 }
 h5{
-    font-weight: 800;
+    font-weight: 500;
 }
 .cards-solutions{
     padding: 1em;
 }
 .solutions{
+    color: #222121;;
     display: grid;
+    h5{
+        font-size: 1.4rem;
+        // font-family: thin;
+    }
+    p{
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+    a , .flex1a{
+        color: #166ef1;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+
+}
+.flex1{
+    margin: 0 auto;
+    display: grid;
+    // margin-inline: 2rem;
+    .flex1a{
+        color: #166ef1;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
+
+    width: min(90%);
+    .images{
+        padding: 3rem;
+       background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .images-back1{
+        background-image: url('/assets/monitor.jpeg');
+    }
+    .images-back2{
+        background-image: url('/assets/smilingwoman.jpg');
+    }
+    .images-back3{
+        background-image: url('/assets/screens.png');
+    }
 }
 @media (min-width:35em) and (max-width:59em) {
     .solutions{
         display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 90%;
+  margin: 0 auto;
+    }
+    .options{
+        // grid-template-columns: repeat(2, 1fr);
+    }
+    .flex1{
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (min-width:60em) {
+    .hero-title{
+        padding-top: 3em;
+    }
     .hero-image{
     -webkit-mask-image: linear-gradient(to left, black, black 10%, transparent);
     mask-image: linear-gradient(to left, black, black 10%, transparent);     
@@ -96,7 +176,7 @@ h5{
         width: 50%;
     }
     .hero-p2{
-        padding-bottom: 1em;
+        padding-bottom: 2em;
     }
     .h2-offers{
         padding-top: 1em;
@@ -106,6 +186,25 @@ h5{
         max-width: 800px;
     }
     .solutions{
-        grid-template-columns: repeat(4, 1fr);
+        padding-top: 2rem;
+        grid-template-columns: repeat(3, 1fr);
+        width: 90%;
+  margin: 0 auto;
+    }
+    .options{
+        grid-template-columns: repeat(6, 1fr);
+        width: min(80%, 800px);
+  margin: 0 auto;
+  padding-block: 3em;
+    }
+    .flex1{
+        grid-template-columns: repeat(2, 1fr);
+        padding-block: 3em;
+    }
+    .images, .wordsm{
+        margin: 3rem;
+    }
+    .flex1-words-p{
+        padding-inline-start:6em ;
     }
 }
