--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,22 +37,34 @@
     text-transform: capitalize;
     text-decoration: underline wavy $the-blue;
 }
-
-
-
+  .demo-button1{
+    border: 1px solid #fff;
+  padding: 8px 25px;
+  text-transform: capitalize;
+  font-size: small;
+  background-color: #0a0a22;
+  font-weight: 600;
+  color: #fff;
+  border-radius: 30px;
+  transition: all 0.5s ease;
+  }
   .demo-button{
-    Border: 1px solid #fff;
+    border: 1px solid #fff;
   padding: 8px 25px;
   text-transform: capitalize;
   font-size: small;
   background-color: #0a0a22;
   color: #fff;
+  font-weight: 600;
   border-radius: 30px;
   transition: all 0.5s ease;
   }
   .demo-button:hover{
     background-color: #bf2525;
     color: #0a0a22;
+  }
+  a{
+    cursor: pointer;
   }
 @media (min-width:35em) and (max-width:60em) {
 
@@ -62,7 +74,7 @@
 
 @media (min-width : 60em) {
     .demo-button{
-        padding: 5px 20px;
+        padding: 13px 33px;
     }
   
 }
